--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,5 @@
 {
-  "semanticCommits": true,
+  "semanticCommits": "enabled",
   "packageRules": [
     {
       "depTypeList": ["devDependencies"],
