--- a/.commitlintrc.json
+++ b/.commitlintrc.json
@@ -9,20 +9,7 @@
     "type-enum": [
       2,
       "always",
-      [
-        "build",
-        "chore",
-        "ci",
-        "docs",
-        "feat",
-        "fix",
-        "perf",
-        "refactor",
-        "style",
-        "test",
-        "revert",
-        "BREAKING CHANGE"
-      ]
+      ["build", "chore", "ci", "docs", "feat", "fix", "perf", "refactor", "style", "test", "revert"]
     ]
   }
 }
